--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,11 @@ section {
     width: 100%;
 }
 
+.contact-content h2,
+.contact-content p {
+    text-shadow: 0px 0px 4px white;
+}
+
 .cta-button {
     display: inline-block;
     padding: 0.8rem 2rem;
@@ -488,6 +493,7 @@ section {
     letter-spacing: 1px;
     font-weight: 600;
     transition: all 0.3s;
+    text-shadow: 0px 0px 4px white;
 }
 
 .social-links-container {
